# infinity-client-webui

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  toEnv.bat
apps/: DBManagerApi.py  InfinityConfigApi.py  UserApi.py  __init__.py
db/: SqliteDB.py  __init__.py
global_utils/: __init__.py
service/: InfinityConfigService.py  InfinityConns.py  UserService.py  __init__.py
web/: help.html  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  InfinityConstants.js  adiUtils.js  main.js
web/src/assets/: base.css  main.css
web/src/components/: InfinityPythonClient.vue  RoadMap.vue  SystemTip.vue  home.vue
web/src/components/dbcomponents/: DatabasesTree.vue  NewTable.vue  TableDetail.vue
